Closes #929: Fix sidebar nav can't scroll on mobile (temporary fix).

--- a/themes/custom/az_barrio/css/style.css
+++ b/themes/custom/az_barrio/css/style.css
@@ -713,3 +713,13 @@ fieldset.collapsed {
   padding-bottom: 0;
   color: #49595e;
 }
+
+.navbar-offcanvas.open {
+   overflow-y: scroll;
+}
+@media (min-width: 992px) {
+  .navbar-offcanvas.open {
+     overflow-y: initial;
+  }
+}
+
